feat: add Russian translation

--- a/index.html
+++ b/index.html
@@ -16,31 +16,32 @@
                     <div class="logo-container">
                         <img src="images/logo_small.svg" alt="Logo">
                         <div class="company-name">
-                            <p>Branding &</p>
-                            <p class="company-name-smaller">Design Studio</p>
+                            <p data-i18n="company-name">Branding &</p>
+                            <p class="company-name-smaller" data-i18n="company-name-smaller">Design Studio</p>
                         </div>
                         <div class="company-address">
-                            <p>Double Bay 2028,</p>
-                            <p>New York</p>
+                            <p data-i18n="company-address-1">Double Bay 2028,</p>
+                            <p data-i18n="company-address-2">New York</p>
                         </div>
                     </div>
                     <div class="burger-menu">
                         <img src="images/burger-menu.svg" alt="Menu">
                     </div>
                     <div class="contact-us">
+                        <button class="translate-button" id="translate-button">EN/RU</button>
                         <div class="shopping-cart">
                             <img src="images/shopping_cart.svg" alt="Shopping cart">
                             <div class="cart-items-number">
                                 <p>0</p>
                             </div>
                         </div>
-                        <button class="contact-button">Contact us</button>
+                        <button class="contact-button" data-i18n="contact-us">Contact us</button>
                     </div>
                 </div>
             </header>
             <main>
                 <section class="company-name-huge">
-                    <h1>branding & digital design studio.</h1>
+                    <h1 data-i18n="company-name-huge">branding & digital design studio.</h1>
                     <img src="images/mouse.svg" alt="mouse">
                 </section>
                 <div class="intro">
@@ -59,15 +60,15 @@
                         </div>
                     </div>
                     <section class="intro-info">
-                        <h2 class="intro-info-header">We're a creative digital studio</h2>
+                        <h2 class="intro-info-header" data-i18n="intro-info-header">We're a creative digital studio</h2>
                         <div class="intro-info-text">
-                            <p class="intro-info-text-1">We are a forward-thinking team of designers and developers driven by passion — and fuelled by curiosity.</p>
-                            <p class="intro-info-text-2">We believe that the human dimensions essential to start any successful project and that this is where splendid emotional relationships between the company and people are born.</p>
-                            <button class="meet-team-button">meet the team</button>
+                            <p class="intro-info-text-1" data-i18n="intro-info-text-1">We are a forward-thinking team of designers and developers driven by passion — and fuelled by curiosity.</p>
+                            <p class="intro-info-text-2" data-i18n="intro-info-text-2">We believe that the human dimensions essential to start any successful project and that this is where splendid emotional relationships between the company and people are born.</p>
+                            <button class="meet-team-button" data-i18n="meet-team-button">meet the team</button>
                         </div>
                     </section>
                     <section class="collaborations">
-                        <h4>Teams and companies we work with</h4>
+                        <h4 data-i18n="collaborations">Teams and companies we work with</h4>
                         <div class="logo-container">
                             <img id="collaboration-logo-1" src="images/logo1.svg" alt="logo 1">
                             <img id="collaboration-logo-2" src="images/logo2.png" alt="logo 2">
@@ -76,22 +77,22 @@
                             <img id="collaboration-logo-5" src="images/logo5.svg" alt="logo 5">
                             <img id="collaboration-logo-6" src="images/logo6.png" alt="logo 6">
                         </div>
-                        <button class="view-work-button">view our work</button>
+                        <button class="view-work-button" data-i18n="view-work-button">view our work</button>
                     </section>
                 </div>
                 <section class="our-work-section">
-                    <h2 class="our-work-header">Our work</h2>
+                    <h2 class="our-work-header" data-i18n="our-work-header">Our work</h2>
                     <div class="photo-container">
                         <img src="images/work_photo_1.png" alt="work photo 1">
                         <img src="images/work_photo_2.png" alt="work photo 2">
                         <img src="images/work_photo_3.png" alt="work photo 3">
                     </div>
                     <div class="all-projects-container">
-                        <button class="all-projects-button">all projects</button>
+                        <button class="all-projects-button" data-i18n="all-projects-button">all projects</button>
                     </div>
                 </section>
                 <section class="experiences-section">
-                    <h2 class="section-header">We build experiences</h2>
+                    <h2 class="section-header" data-i18n="section-header-1">We build experiences</h2>
                     <div class="card-container">
                         <article class="card">
                             <div class="card-background">
@@ -100,7 +101,7 @@
                                 </div>
                             </div>
                             <h3 class="card-header">Prototyping</h3>
-                            <p class="card-description" id="card-description-1">Make sure you're building the right product.</p>
+                            <p class="card-description" id="card-description-1" data-i18n="card-description-1">Make sure you're building the right product.</p>
                         </article>
                         <article class="card">
                             <div class="card-background">
@@ -109,7 +110,7 @@
                                 </div>
                             </div>
                             <h3 class="card-header">Web Design</h3>
-                            <p class="card-description" id="card-description-2">Attract and engage your customers with a website.</p>
+                            <p class="card-description" id="card-description-2" data-i18n="card-description-2">Attract and engage your customers with a website.</p>
                         </article>
                         <article class="card">
                             <div class="card-background">
@@ -118,20 +119,20 @@
                                 </div>
                             </div>
                             <h3 class="card-header">Development</h3>
-                            <p class="card-description" id="card-description-3">Ensure your site performs up to your users’ standards.</p>
+                            <p class="card-description" id="card-description-3" data-i18n="card-description-3">Ensure your site performs up to your users’ standards.</p>
                         </article>
                     </div>
                 </section>
                 <section class="testimonials">
-                    <h2 class="section-header">Testimonials</h2>
+                    <h2 class="section-header" data-i18n="section-header-2">Testimonials</h2>
                     <div class="review-container">
                         <div class="user-review">
                             <img src="images/user_avatar.png" alt="user avatar">
                             <div class="review">
-                                <p class="review-text">"Together with the Görm team, we have compiled a new product page."</p>
+                                <p class="review-text" data-i18n="review-text">"Together with the Görm team, we have compiled a new product page."</p>
                                 <div class="credits">
                                     <p>John Doe</p>
-                                    <p>Görm Customer</p>
+                                    <p data-i18n="credits">Görm Customer</p>
                                 </div>
                             </div>
                         </div>
@@ -144,39 +145,39 @@
                 </section>
                 <section class="our-skills">
                     <div class="skills-wrapper">
-                        <h2 class="section-header">Our skills</h2>
+                        <h2 class="section-header" data-i18n="section-header-3">Our skills</h2>
                         <div class="skills-container">
                             <div class="parameters">
                                 <div class="parameter">
                                     <div class="parameter-name">
-                                        <span>Graphic Design</span>
+                                        <span data-i18n="parameter-name-1">Graphic Design</span>
                                         <span>80%</span>
                                     </div>
                                     <div class="parameter-underline" id="underline-1"></div>
                                 </div>
                                 <div class="parameter">
                                     <div class="parameter-name">
-                                        <span>Lead Generation</span>
+                                        <span data-i18n="parameter-name-2">Lead Generation</span>
                                         <span>41%</span>
                                     </div>
                                     <div class="parameter-underline" id="underline-2"></div>
                                 </div>
                                 <div class="parameter">
                                     <div class="parameter-name">
-                                        <span>Photoshop</span>
+                                        <span data-i18n="parameter-name-3">Photoshop</span>
                                         <span>70%</span>
                                     </div>
                                     <div class="parameter-underline" id="underline-3"></div>
                                 </div>
                                 <div class="parameter">
                                     <div class="parameter-name">
-                                        <span>Illustration</span>
+                                        <span data-i18n="parameter-name-4">Illustration</span>
                                         <span>100%</span>
                                     </div>
                                     <div class="parameter-underline" id="underline-4"></div>
                                 </div>
                             </div>
-                            <p>* Companies we've helped build their website with Görm</p>
+                            <p data-i18n="annotation">* Companies we've helped build their website with Görm</p>
                         </div>
                     </div>
                     <div class="image-container">
@@ -184,34 +185,34 @@
                     </div>
                 </section>
                 <section class="fun-facts">
-                    <h2 class="fun-facts-header">Fun facts</h2>
+                    <h2 class="fun-facts-header" data-i18n="fun-facts-header">Fun facts</h2>
                     <div class="facts">
                         <article class="fact">
                             <img src="images/fact_icon_1.png" alt="bulb">
                             <div class="fact-info">
                                 <h3>10</h3>
-                                <p>Years on market</p>
+                                <p data-i18n="fact-info-1">Years on market</p>
                             </div>
                         </article>
                         <article class="fact">
                             <img src="images/fact_icon_2.png" alt="badge">
                             <div class="fact-info">
                                 <h3>340+</h3>
-                                <p>Project done</p>
+                                <p data-i18n="fact-info-2">Project done</p>
                             </div>
                         </article>
                         <article class="fact">
                             <img src="images/fact_icon_3.png" alt="person">
                             <div class="fact-info">
                                 <h3>17</h3>
-                                <p>Hero's member</p>
+                                <p data-i18n="fact-info-3">Hero's member</p>
                             </div>
                         </article>
                         <article class="fact">
                             <img src="images/fact_icon_4.png" alt="coffee">
                             <div class="fact-info">
                                 <h3>900+</h3>
-                                <p>Cups of coffee</p>
+                                <p data-i18n="fact-info-4">Cups of coffee</p>
                             </div>
                         </article>
                     </div>
@@ -224,7 +225,7 @@
                         <div class="aside-rectangle"></div>
                     </div>
                     <section class="form-container">
-                        <h2 class="section-header">Contact us</h2>
+                        <h2 class="section-header" data-i18n="contact-us">Contact us</h2>
                         <form class="form">
                             <input type="text" id="name" placeholder="Name*" autocomplete="off">
                             <input type="text" id="email" placeholder="Email*" autocomplete="off">
@@ -235,26 +236,26 @@
                     </section>
                 </div>
                 <section class="from-blog">
-                    <h2 class="section-header">From Blog</h2>
+                    <h2 class="section-header" data-i18n="section-header-5">From Blog</h2>
                     <div class="blogs-container">
                         <article class="blog">
                             <img src="images/blog_image_1.png" alt="man unpacking bags">
                             <div class="blog-content">
                                 <div class="blog-type-container" id="blog-1">
-                                    <p class="blog-type">Marketing</p>
+                                    <p class="blog-type" data-i18n="blog-type-1">Marketing</p>
                                 </div>
-                                <h3 class="blog-header">Curating a workplace that inspires all of us</h3>
-                                <a class="read-more">Read More</a>
+                                <h3 class="blog-header" data-i18n="blog-header-1">Curating a workplace that inspires all of us</h3>
+                                <a class="read-more" data-i18n="read-more-1">Read More</a>
                             </div>
                         </article>
                         <article class="blog">
                             <img src="images/blog_image_2.png" alt="people standing together">
                             <div class="blog-content">
                                 <div class="blog-type-container" id="blog-2">
-                                    <p class="blog-type">Design</p>
+                                    <p class="blog-type" data-i18n="blog-type-2">Design</p>
                                 </div>
-                                <h3 class="blog-header">Designers who changed the web with Webflow</h3>
-                                <a class="read-more">Read More</a>
+                                <h3 class="blog-header" data-i18n="blog-header-2">Designers who changed the web with Webflow</h3>
+                                <a class="read-more" data-i18n="read-more-1">Read More</a>
                             </div>
                         </article>
                     </div>
@@ -262,18 +263,18 @@
             </main>
             <footer>
                 <section class="contact-us-banner">
-                    <h2 class="footer-header">Contact Us</h2>
+                    <h2 class="footer-header" data-i18n="footer-header">Contact Us</h2>
                 </section>
                 <div class="footer-info">
                     <div class="company-info">
                         <img src="images/logo_normal.png" alt="logo">
-                        <p>Görm is an award UI/UX designs and branding agency based in New York, USA.</p>
+                        <p data-i18n="company-info">Görm is an award UI/UX designs and branding agency based in New York, USA.</p>
                         <div class="links">
-                            <a id="home">Home</a>
-                            <a id="about">About</a>
-                            <a id="guide">Style Guide</a>
-                            <a id="licensing">Licensing</a>
-                            <a id="instructions">Instructions</a>
+                            <a id="home" data-i18n="home">Home</a>
+                            <a id="about" data-i18n="about">About</a>
+                            <a id="guide" data-i18n="guide">Style Guide</a>
+                            <a id="licensing" data-i18n="licensing">Licensing</a>
+                            <a id="instructions" data-i18n="instructions">Instructions</a>
                         </div>
                     </div>
                     <div class="contacts-container">
@@ -302,5 +303,6 @@
                 </div>
             </footer>
         </div>
+        <script src="js/translate.js"></script>
     </body>
 </html>
