feat: add full translation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <img src="images/burger-menu.svg" alt="Menu">
                     </div>
                     <div class="contact-us">
-                        <button class="translate-button" id="translate-button">EN/RU</button>
+                        <button class="translate-button" id="translate-button">RU</button>
                         <div class="shopping-cart">
                             <img src="images/shopping_cart.svg" alt="Shopping cart">
                             <div class="cart-items-number">
@@ -100,7 +100,7 @@
                                     <img src="images/card_logo_1.png" alt="card logo 1">
                                 </div>
                             </div>
-                            <h3 class="card-header">Prototyping</h3>
+                            <h3 class="card-header" data-i18n="card-header-1">Prototyping</h3>
                             <p class="card-description" id="card-description-1" data-i18n="card-description-1">Make sure you're building the right product.</p>
                         </article>
                         <article class="card">
@@ -109,7 +109,7 @@
                                     <img src="images/card_logo_2.png" alt="card logo 2">
                                 </div>
                             </div>
-                            <h3 class="card-header">Web Design</h3>
+                            <h3 class="card-header" data-i18n="card-header-2">Web Design</h3>
                             <p class="card-description" id="card-description-2" data-i18n="card-description-2">Attract and engage your customers with a website.</p>
                         </article>
                         <article class="card">
@@ -118,7 +118,7 @@
                                     <img src="images/card_logo_3.png" alt="card logo 3">
                                 </div>
                             </div>
-                            <h3 class="card-header">Development</h3>
+                            <h3 class="card-header" data-i18n="card-header-3">Development</h3>
                             <p class="card-description" id="card-description-3" data-i18n="card-description-3">Ensure your site performs up to your users’ standards.</p>
                         </article>
                     </div>
@@ -231,7 +231,7 @@
                             <input type="text" id="email" placeholder="Email*" autocomplete="off">
                             <input type="text" id="website" placeholder="Website URL*" autocomplete="off">
                             <input type="text" id="details" placeholder="Project Details*" autocomplete="off">
-                            <input type="submit" class="form-submit" value="SEND PROPOSAL">
+                            <input type="submit" class="form-submit" id="form-button" value="SEND PROPOSAL" data-i18n="form-button">
                         </form>
                     </section>
                 </div>
