feat: add dark/light theme switching

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <img src="images/burger-menu.svg" alt="Menu">
                     </div>
                     <div class="contact-us">
+                        <button class="theme-button" id="theme-button" data-i18n="theme-button">Switch Theme</button>
                         <button class="translate-button" id="translate-button">RU</button>
                         <div class="shopping-cart">
                             <img src="images/shopping_cart.svg" alt="Shopping cart">
@@ -304,5 +305,6 @@
             </footer>
         </div>
         <script src="js/translate.js"></script>
+        <script src="js/themeSwitch.js"></script>
     </body>
 </html>
