feat: add image switch functionality

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <div class="intro">
                     <div class="intro-video">
                         <div class="video-container">
-                            <img class="video" src="images/intro_video.png" alt="intro">
+                            <img class="video" src="images/intro_video.png" id="intro-video" alt="intro">
                             <img class="play-video" src="images/play_video.png" alt="play">
                         </div>
-                        <button class="next-video">
+                        <button class="next-video" id="next-video-button">
                             <img src="images/next.svg" alt="next">
                         </button>
                         <div class="items-order">
@@ -306,5 +306,6 @@
         </div>
         <script src="js/translate.js"></script>
         <script src="js/themeSwitch.js"></script>
+        <script src="js/switchImage.js"></script>
     </body>
 </html>
