feat: add audio player

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                     <div class="intro-video">
                         <div class="video-container">
                             <img class="video" src="images/intro_video.png" id="intro-video" alt="intro">
-                            <img class="play-video" src="images/play_video.png" alt="play">
+                            <img class="play-video" id="play-video" src="images/play_video.png" alt="play">
+                            <audio src="audio/audio.mp3" class="audio" id="audio"></audio>
                         </div>
                         <button class="next-video" id="next-video-button">
                             <img src="images/next.svg" alt="next">
@@ -307,5 +308,6 @@
         <script src="js/translate.js"></script>
         <script src="js/themeSwitch.js"></script>
         <script src="js/switchImage.js"></script>
+        <script src="js/soundPlay.js"></script>
     </body>
 </html>
